fix: room details overflow

--- a/frontend/src/styles/RoomCard.scss
+++ b/frontend/src/styles/RoomCard.scss
@@ -85,9 +85,11 @@
 .roomPopUp-ameneties {
     font-size: 0.75rem;
     display: flex;
+    width: 100%;
     height: 80vh;
     flex-direction: column;
     flex-wrap: wrap;
+    overflow: auto;
 
     & span {
         max-width: 48%;
